Fix menu clicking that was not covering the whole surface

--- a/src/component/Menu.css
+++ b/src/component/Menu.css
@@ -18,7 +18,7 @@ nav {
 }
 
 nav i {
-	padding-top: 12px !important;
+	margin-top: 12px !important;
 }
 
 .Menu-notification {
